# data4g

./: .gitignore  BACKEND_PLAN.md  BASE_PLAN.md  DATA4G_BACKEND_PLAN.md  DATA4G_BASE.md  DATA4G_FRONTEND_PLAN.md  DATAFORGE-AGENT-GUIDE_SETUP.md  DataForge-Full-DB-Analysis.html  FRONTEND_PLAN.md  MCP_ARCHITECTURE_PLAN.md  prompt.md  requirements.md
backend/: main.py  requirements.txt
backend/core/: __init__.py  access_control.py  config.py  db_client.py  middleware.py  utils.py
backend/core/schemas/: __init__.py
backend/dataforge/: API_ENDPOINTS.md  __init__.py
backend/dataforge/data/: __init__.py  model.py  repository.py
backend/dataforge/route/: __init__.py  api_key_route.py  comparison_route.py  cost_route.py  db_schema_route.py  export_route.py  membership_route.py  project_route.py  reference_route.py  risk_route.py  scan_route.py  share_route.py  spec_route.py  topology_route.py
backend/dataforge/schemas/: __init__.py  (+24 more)
backend/teams/: __init__.py
data4g-mcp/: .gitignore  Dockerfile  README.md  pyproject.toml
data4g-mcp/data4g/: __init__.py  schemas.py
data4g-mcp/data4g/analyzer/: __init__.py  runner.py
data4g-mcp/data4g/analyzer/analyzers/: __init__.py  base.py  node_analyzer.py  python_analyzer.py
data4g-mcp/data4g/analyzer/detectors/: __init__.py  base.py  unbounded_fetch.py
data4g-mcp/data4g/cli/: __init__.py  doctor.py  health.py  init_cmd.py  main.py
data4g-mcp/data4g/mcp/: __init__.py  client.py  config.py  server.py
data4g-mcp/data4g/mcp/tools/: __init__.py  analyzer.py  register.py  session.py
data4g-mcp/tests/: test_analyzer.py
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
(+83 files in other folders)
